DRY refactor