@@ -3,7 +3,6 @@
  */
 package com.codeferm.periphery.device;
 
-import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
 import java.lang.foreign.ValueLayout;
 import java.util.concurrent.TimeUnit;
@@ -17,8 +16,10 @@ import org.periphery.gpio_handle;
  * GPIO switch device with background polling, callback support, and software debouncing.
  * <p>
  * This class provides an event-driven abstraction for GPIO lines that do not support hardware edge detection (EINT). It manages a
- * background thread to monitor state changes and filters out mechanical contact chatter (debounce). If you are using a push button
- * module like in the 37 in 1 kits run - to 5v, S to GND and middle pin to GPIO.
+ * background thread to monitor state changes and filters out mechanical contact chatter.
+ * </p>
+ * <p>
+ * Extends {@link AbstractDevice} for deterministic memory management and zero-allocation polling.
  * </p>
  *
  * @author Steven P. Goldsmith
@@ -26,7 +27,7 @@ import org.periphery.gpio_handle;
  * @since 1.0.0
  */
 @Slf4j
-public class GpioSwitch implements AutoCloseable {
+public final class GpioSwitch extends AbstractDevice {
 
     /**
      * GPIO direction input constant.
@@ -38,51 +39,32 @@ public class GpioSwitch implements AutoCloseable {
      */
     private static final int GPIO_BIAS_PULL_DOWN = 2;
 
-    /**
-     * Reentrant lock for thread-safe access to native handles and buffers.
-     */
     private final ReentrantLock lock = new ReentrantLock();
-
-    /**
-     * Managed arena for native memory segments.
-     */
-    private final Arena arena;
-
-    /**
-     * Native handle for the GPIO character device.
-     */
-    private final MemorySegment handle;
-
-    /**
-     * Pre-allocated buffer for state reads to ensure zero-allocation polling.
-     */
     private final MemorySegment stateBuffer;
-
-    /**
-     * Flag to control the lifecycle of the background monitoring thread.
-     */
     private volatile boolean watching = false;
 
     /**
      * Initializes the GPIO switch with internal pull-down bias.
      *
      * @param device GPIO device path (e.g., "/dev/gpiochip0").
-     * @param line GPIO line number (e.g., 77 for Pine A64).
+     * @param line GPIO line number.
      * @throws RuntimeException If the native GPIO device cannot be opened.
      */
     public GpioSwitch(final String device, final int line) {
-        this.arena = Arena.ofShared();
-        this.handle = arena.allocate(gpio_handle.layout());
-        this.stateBuffer = arena.allocate(ValueLayout.JAVA_BOOLEAN);
-        final var cDevice = arena.allocateFrom(device);
-        if (Periphery.gpio_open(handle, cDevice, line, GPIO_DIR_IN) < 0) {
-            final var error = Periphery.gpio_errmsg(handle).getString(0);
-            throw new RuntimeException("Failed to open GPIO %s line %d: %s".formatted(device, line, error));
-        }
+        super(gpio_handle.layout());
+
+        // Allocate state buffer using the inherited arena
+        this.stateBuffer = getArena().allocate(ValueLayout.JAVA_BOOLEAN);
+        final var cDevice = getArena().allocateFrom(device);
+
+        checkError(Periphery.gpio_open(getHandle(), cDevice, line, GPIO_DIR_IN),
+                String.format("Failed to open GPIO %s line %d", device, line));
+
         // Apply bias to prevent ghosting on floating pins [2026-01-22]
-        if (Periphery.gpio_set_bias(handle, GPIO_BIAS_PULL_DOWN) < 0) {
+        if (Periphery.gpio_set_bias(getHandle(), GPIO_BIAS_PULL_DOWN) < 0) {
             log.warn("Hardware bias not supported on this pin; external resistor may be required.");
         }
+
         log.atDebug().log("GPIO Switch initialized on {} line {}", device, line);
     }
 
@@ -94,10 +76,7 @@ public class GpioSwitch implements AutoCloseable {
     public int getValue() {
         lock.lock();
         try {
-            if (Periphery.gpio_read(handle, stateBuffer) < 0) {
-                final var error = Periphery.gpio_errmsg(handle).getString(0);
-                throw new RuntimeException("GPIO read failed: %s".formatted(error));
-            }
+            checkError(Periphery.gpio_read(getHandle(), stateBuffer), "GPIO read failed");
             return stateBuffer.get(ValueLayout.JAVA_BOOLEAN, 0) ? 1 : 0;
         } finally {
             lock.unlock();
@@ -106,12 +85,9 @@ public class GpioSwitch implements AutoCloseable {
 
     /**
      * Starts a background thread to monitor state changes with software debouncing.
-     * <p>
-     * The callback is triggered only after the signal has remained stable for the specified debounce duration.
-     * </p>
      *
-     * @param pollIntervalMs Frequency to sample the hardware in milliseconds.
-     * @param debounceMs Stability duration required to confirm a state change.
+     * @param pollIntervalMs Frequency to sample hardware (ms).
+     * @param debounceMs Stability duration required to confirm a change (ms).
      * @param callback The consumer invoked with the validated state (0 or 1).
      */
     public void watch(final long pollIntervalMs, final long debounceMs, final Consumer<Integer> callback) {
@@ -119,24 +95,25 @@ public class GpioSwitch implements AutoCloseable {
             throw new IllegalStateException("Watch thread is already active.");
         }
         watching = true;
+
         final var thread = new Thread(() -> {
             log.info("Background watch thread started: {}ms poll, {}ms debounce.", pollIntervalMs, debounceMs);
             var lastValidValue = getValue();
             var lastChangeTime = System.nanoTime();
             final var debounceNanos = TimeUnit.MILLISECONDS.toNanos(debounceMs);
+
             while (watching && !Thread.currentThread().isInterrupted()) {
                 final var currentValue = getValue();
                 final var currentTime = System.nanoTime();
-                // If hardware state differs from last confirmed stable value
+
                 if (currentValue != lastValidValue) {
-                    // Only accept the change if the debounce period has elapsed
                     if ((currentTime - lastChangeTime) > debounceNanos) {
                         lastValidValue = currentValue;
                         callback.accept(currentValue);
                     }
-                    // Reset change timer on every detected transition to ensure stability
                     lastChangeTime = currentTime;
                 }
+
                 try {
                     TimeUnit.MILLISECONDS.sleep(pollIntervalMs);
                 } catch (final InterruptedException e) {
@@ -145,6 +122,7 @@ public class GpioSwitch implements AutoCloseable {
             }
             log.info("Background watch thread stopping.");
         }, "GpioWatch-Thread");
+
         thread.setDaemon(true);
         thread.start();
     }
@@ -153,14 +131,12 @@ public class GpioSwitch implements AutoCloseable {
      * Stops monitoring and releases native GPIO resources.
      */
     @Override
-    public void close() {
+    protected void closeNative() {
         watching = false;
         lock.lock();
         try {
-            try (arena) {
-                if (handle.address() != 0) {
-                    Periphery.gpio_close(handle);
-                }
+            if (getHandle().address() != 0) {
+                Periphery.gpio_close(getHandle());
             }
         } finally {
             lock.unlock();
